Trying to fix the overflow in mobile device

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -108,7 +108,7 @@ footer {
   
   @media only screen and (max-width: $bp-medium) {
 
-  body {
+  body, html {
     overflow-x: hidden;
   }
 
